start-of-about-page

--- a/about.html
+++ b/about.html
@@ -128,7 +128,122 @@
         </div>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <section class="alternative-hero">
+        <div class="container alternative-hero-container alternative-hero-container--about">
+          <h1 class="alternative-hero__title title">about</h1>
+          <div class="alternative-hero__social-links">
+            <ul class="socials socials">
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="https://t.me/lexandrOl"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-telegram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="https://github.com/MoskaletsOleksandr"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-github1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="www.linkedin.com/in/oleksandr-moskalets"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="https://www.instagram.com/batyasanych"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="stacks section">
+        <div class="container stacks-container">
+          <h2 class="title stacks-title"><span class="title-accent">02</span>Stacks</h2>
+          <ul class="stacks__list">
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="25" height="25">
+                <use href="./images/symbol-defs.svg#icon-trello"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="35" height="27">
+                <use href="./images/symbol-defs.svg#icon-sass"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="105" height="26">
+                <use href="./images/symbol-defs.svg#icon-slack"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="35" height="22">
+                <use href="./images/symbol-defs.svg#icon-node"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="28" height="25">
+                <use href="./images/symbol-defs.svg#icon-react"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="28" height="28">
+                <use href="./images/symbol-defs.svg#icon-git"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="28" height="25">
+                <use href="./images/symbol-defs.svg#icon-js"></use>
+              </svg>
+            </li>
+            <li class="stacks__item">
+              <svg class="stacks__icon" width="25" height="28">
+                <use href="./images/symbol-defs.svg#icon-html-five2"></use>
+              </svg>
+            </li>
+          </ul>
+          <div class="stacks__actions">
+            <h3 class="stacks__actions-title">let’s work together on Your Next Project</h3>
+            <button class="stacks__hire-button button open-modal-button">HIRE ME NOW</button>
+            <button type="button" class="stacks__download-button">
+              <svg class="stacks__download-icon" width="16" height="16">
+                <use href="./images/symbol-defs.svg#icon-vector-btn"></use>
+              </svg>
+              Download CV
+            </button>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer section">
       <div class="container footer-container">
         <div class="footer__content">
@@ -266,6 +381,82 @@
         </div>
       </div>
     </footer>
+
+    <div id="contactModal" class="backdrop is-hidden">
+      <div class="modal">
+        <button id="modal__close-btn" type="button" class="modal__close-btn close-btn">
+          <svg class="close-btn__icon" width="30" height="30">
+            <use href="./images/symbol-defs.svg#close-icon"></use>
+          </svg>
+        </button>
+        <b class="modal__title">Email me if you have any questions</b>
+        <form class="modal__form modal-form">
+          <div class="modal-form__field">
+            <label for="name" class="modal-form__contact-label">Name</label>
+            <div class="modal-form__input-wrap">
+              <input
+                type="text"
+                name="name"
+                id="name"
+                class="modal-form__input modal-form__input--left-padding"
+                placeholder=" "
+                required
+              />
+              <svg class="modal-form__icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-person-form"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form__field">
+            <label for="tel" class="modal-form__contact-label">Phone number</label>
+            <div class="modal-form__input-wrap">
+              <input
+                type="tel"
+                name="tel"
+                id="tel"
+                class="modal-form__input modal-form__input--left-padding"
+                placeholder=" "
+                required
+              />
+              <svg class="modal-form__icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-phone-form"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form__field">
+            <label for="mail" class="modal-form__contact-label">Email</label>
+            <div class="modal-form__input-wrap">
+              <input
+                type="email"
+                name="mail"
+                id="mail"
+                class="modal-form__input modal-form__input--left-padding"
+                placeholder=" "
+              />
+              <svg class="modal-form__icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-email-form"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form__field">
+            <label for="comment" class="modal-form__contact-label">Comment</label>
+            <textarea
+              name="comment"
+              id="comment"
+              class="modal-form__comment modal-form__input"
+              placeholder="Введіть текст"
+            ></textarea>
+          </div>
+          <button type="submit" class="modal-form__btn button">Send</button>
+        </form>
+        <button type="button" class="stacks__download-button stacks__download-button--modal">
+          <svg class="stacks__download-icon" width="16" height="16">
+            <use href="./images/symbol-defs.svg#icon-vector-btn"></use>
+          </svg>
+          Download CV
+        </button>
+      </div>
+    </div>
 
     <script type="module" src="./js/script.js"></script>
   </body>
