--- a/portfolio.html
+++ b/portfolio.html
@@ -136,10 +136,10 @@
       </div>
     </header>
     <main class="main">
-      <section class="portfolio-hero">
-        <div class="container portfolio-hero-container">
-          <h1 class="portfolio-hero__title title">Portfolio</h1>
-          <div class="portfolio-hero__social-links">
+      <section class="alternative-hero">
+        <div class="container alternative-hero-container alternative-hero-container--portfolio">
+          <h1 class="alternative-hero__title title">Portfolio</h1>
+          <div class="alternative-hero__social-links">
             <ul class="socials socials">
               <li class="socials__item">
                 <a
