--- a/about.html
+++ b/about.html
@@ -186,9 +186,67 @@
           </div>
         </div>
       </section>
+      <section class="about section">
+        <div class="container">
+          <div class="about__content">
+            <div class="about_photo-wrapper">
+              <img
+                src="./images/about-image.jpg"
+                alt=""
+                class="about__photo"
+                width="343"
+                height="472"
+              />
+            </div>
+            <div class="about__info">
+              <h2 class="title"><span class="title-accent">01</span>about me</h2>
+              <p class="about__subtitle">
+                I'm Professional Designer and Front-End Web Developer That Solve Your Problems
+              </p>
+              <p class="about__text">
+                AAmet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                amet.
+              </p>
+              <p class="about__text">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                officia consequat duis enim velit mollit.
+              </p>
+              <ul class="about-page__stats">
+                <li class="about-page__stat">
+                  <div class="about-page__stat-info">
+                    <span class="title-accent">25</span>
+                    <p class="abut-page__stat-text">Saticfied<br />Customers</p>
+                  </div>
+                </li>
+                <li class="about-page__stat">
+                  <div class="about-page__stat-info">
+                    <span class="title-accent">8</span>
+                    <p class="abut-page__stat-text">Year<br />of experience</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="skills">
+        <div class="container">
+          <div class="skills__info">
+            <h2 class="title"><span class="title-accent">02</span>My Skills</h2>
+            <p class="skills__text">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+              officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+              amet.
+            </p>
+            <button class="button open-modal-button">Download CV</button>
+          </div>
+          <div class="skills_stats"></div>
+        </div>
+      </section>
       <section class="stacks section">
         <div class="container stacks-container">
-          <h2 class="title stacks-title"><span class="title-accent">02</span>Stacks</h2>
+          <h2 class="title stacks-title"><span class="title-accent">04</span>Stacks</h2>
           <ul class="stacks__list">
             <li class="stacks__item">
               <svg class="stacks__icon" width="25" height="25">
@@ -458,6 +516,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="module" src="./js/script.js"></script>
   </body>
 </html>
