--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
                     <stop offset="100%" stop-color="#673ab7" />
                   </linearGradient>
                 </defs>
-                <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+                <circle id="circle" cx="80" cy="80" r="70" stroke-linecap="round" />
                 <!-- <use xlink:href="./images/symbol-defs.svg#icon-circle"></use> -->
               </svg>
             </div>
