animate-fot-each-skill__number

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                   <a href="./index.html" class="mob-nav__link">home</a>
                 </li>
                 <li class="mob-nav__item">
-                  <a href="/about.html" class="mob-nav__link mob-nav__link--current">about</a>
+                  <a href="./about.html" class="mob-nav__link mob-nav__link--current">about</a>
                 </li>
                 <li class="mob-nav__item">
                   <a href="./service.html" class="mob-nav__link">service</a>
@@ -255,7 +255,41 @@
                     <stop offset="100%" stop-color="#673ab7" />
                   </linearGradient>
                 </defs>
-                <circle id="circle" cx="80" cy="80" r="70" stroke-linecap="round" />
+                <circle class="circle" cx="80" cy="80" r="70" stroke-linecap="round" />
+                <!-- <use xlink:href="./images/symbol-defs.svg#icon-circle"></use> -->
+              </svg>
+            </div>
+            <div class="skills__skill animated">
+              <div class="skill__outer">
+                <div class="skill__inner">
+                  <p class="skill__number"></p>
+                </div>
+              </div>
+              <svg class="skill__circle" width="160" height="160">
+                <defs>
+                  <linearGradient id="GradientColor">
+                    <stop offset="0%" stop-color="#e91e63" />
+                    <stop offset="100%" stop-color="#673ab7" />
+                  </linearGradient>
+                </defs>
+                <circle class="circle" cx="80" cy="80" r="70" stroke-linecap="round" />
+                <!-- <use xlink:href="./images/symbol-defs.svg#icon-circle"></use> -->
+              </svg>
+            </div>
+            <div class="skills__skill animated">
+              <div class="skill__outer">
+                <div class="skill__inner">
+                  <p class="skill__number"></p>
+                </div>
+              </div>
+              <svg class="skill__circle" width="160" height="160">
+                <defs>
+                  <linearGradient id="GradientColor">
+                    <stop offset="0%" stop-color="#e91e63" />
+                    <stop offset="100%" stop-color="#673ab7" />
+                  </linearGradient>
+                </defs>
+                <circle class="circle" cx="80" cy="80" r="70" stroke-linecap="round" />
                 <!-- <use xlink:href="./images/symbol-defs.svg#icon-circle"></use> -->
               </svg>
             </div>
