--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                   <a href="./index.html" class="mob-nav__link">home</a>
                 </li>
                 <li class="mob-nav__item">
-                  <a href="/about.html" class="mob-nav__link">about</a>
+                  <a href="./about.html" class="mob-nav__link">about</a>
                 </li>
                 <li class="mob-nav__item">
                   <a href="./service.html" class="mob-nav__link">service</a>
