contact-page-base-markup

--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,170 @@
         </div>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <section class="alternative-hero">
+        <div class="container alternative-hero-container alternative-hero-container--contact">
+          <h1 class="alternative-hero__title title">contact</h1>
+          <div class="alternative-hero__social-links">
+            <ul class="socials socials">
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="https://t.me/lexandrOl"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-telegram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="https://github.com/MoskaletsOleksandr"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-github1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="www.linkedin.com/in/oleksandr-moskalets"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="https://www.instagram.com/batyasanych"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="section contact">
+        <div class="container">
+          <div class="contact__columns">
+            <div class="contact__column">
+              <h2 class="title contact-title"><span class="title-accent">01</span>Contact</h2>
+              <ul class="footer__contact-list">
+                <li class="footer__contact-item">
+                  <a class="footer__contact-link" href="tel:+380685856991">
+                    <svg class="footer__contact-icon" width="24" height="24">
+                      <use href="./images/symbol-defs.svg#icon-phone"></use>
+                    </svg>
+                    <div class="footer__contact-info">
+                      <p class="footer__contact-type">Phone</p>
+                      <p class="footer__contact-detail">+38 (068) 585-69-91</p>
+                    </div>
+                  </a>
+                </li>
+                <li class="footer__contact-item">
+                  <a class="footer__contact-link" href="mailto:oleksandr.moskalets.dev@gmail.com">
+                    <svg class="footer__contact-icon" width="24" height="24">
+                      <use href="./images/symbol-defs.svg#icon-email"></use>
+                    </svg>
+                    <div class="footer__contact-info">
+                      <p class="footer__contact-type">Email</p>
+                      <p class="footer__contact-detail">oleksandr.moskalets.dev@gmail.com</p>
+                    </div>
+                  </a>
+                </li>
+                <li class="footer__contact-item">
+                  <a
+                    class="footer__contact-link"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="footer__contact-icon" width="24" height="24">
+                      <use href="./images/symbol-defs.svg#icon-point"></use>
+                    </svg>
+                    <div class="footer__contact-info">
+                      <p class="footer__contact-type">Address</p>
+                      <p class="footer__contact-detail">Kyiv, Ukraine</p>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="map contact__column">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d411.65926176939587!2d33.41636629624095!3d49.0700417979708!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d75323d0785153%3A0x9adcac3ec41912d6!2z0YPQuy4g0JjQs9C-0YDRjyDQodC10YDQtNGO0LrQsCwgNDcsINCa0YDQtdC80LXQvdGH0YPQsywg0J_QvtC70YLQsNCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsIDM5NjAw!5e0!3m2!1sru!2sua!4v1685556869719!5m2!1sru!2sua"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="questions section">
+        <div class="container questions-container">
+          <h2 class="title questions-title">
+            <span class="title-accent">02</span>HAVE ANY QUESTIONS?
+          </h2>
+          <div class="faq">
+            <div class="faq-item">
+              <input type="checkbox" class="faq-input visually-hidden" id="faq_1" />
+              <label for="faq_1" class="faq-title">Lorem ipsum dolor sit amet.</label>
+              <div class="faq-text">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, porro incidunt!
+                  Officia officiis, nemo voluptatum voluptate sint quam, exercitationem corporis id,
+                  ut eius mollitia commodi. Voluptatibus, voluptates tenetur ab praesentium,
+                  explicabo dolorem repellat, eius magni eveniet minus adipisci cum consequatur!
+                </p>
+              </div>
+            </div>
+            <div class="faq-item">
+              <input type="checkbox" class="faq-input visually-hidden" id="faq_2" />
+              <label for="faq_2" class="faq-title">Lorem ipsum dolor sit amet.</label>
+              <div class="faq-text">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, porro incidunt!
+                  Officia officiis, nemo voluptatum voluptate sint quam, exercitationem corporis id,
+                  ut eius mollitia commodi. Voluptatibus, voluptates tenetur ab praesentium,
+                  explicabo dolorem repellat, eius magni eveniet minus adipisci cum consequatur!
+                </p>
+              </div>
+            </div>
+            <div class="faq-item">
+              <input type="checkbox" class="faq-input visually-hidden" id="faq_3" />
+              <label for="faq_3" class="faq-title">Lorem ipsum dolor sit amet.</label>
+              <div class="faq-text">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, porro incidunt!
+                  Officia officiis, nemo voluptatum voluptate sint quam, exercitationem corporis id,
+                  ut eius mollitia commodi. Voluptatibus, voluptates tenetur ab praesentium,
+                  explicabo dolorem repellat, eius magni eveniet minus adipisci cum consequatur!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer section">
       <div class="container footer-container">
         <div class="footer__content">
