--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             <li class="nav__item">
               <a href="./about.html" class="nav__link">about</a>
             </li>
-            <li class="nav__item"><a href="./service.html" class="nav__link">service</a></li>
             <li class="nav__item"><a href="./portfolio.html" class="nav__link">portfolio</a></li>
           </ul>
         </nav>
@@ -67,10 +66,10 @@
                   <a href="./about.html" class="mob-nav__link">about</a>
                 </li>
                 <li class="mob-nav__item">
-                  <a href="./service.html" class="mob-nav__link">service</a>
+                  <a href="./portfolio.html" class="mob-nav__link">portfolio</a>
                 </li>
                 <li class="mob-nav__item">
-                  <a href="./portfolio.html" class="mob-nav__link">portfolio</a>
+                  <a href="./contact.html" class="mob-nav__link mob-nav__link--contact">contact</a>
                 </li>
               </ul>
             </nav>
@@ -125,7 +124,6 @@
                   </a>
                 </li>
               </ul>
-              <a href="" class="mob-nav__link mob-nav__link--contact">contact</a>
             </div>
           </div>
         </div>
