--- a/about.html
+++ b/about.html
@@ -32,7 +32,6 @@
             <li class="nav__item">
               <a href="./about.html" class="nav__link nav__link--current">about</a>
             </li>
-            <li class="nav__item"><a href="./service.html" class="nav__link">service</a></li>
             <li class="nav__item"><a href="./portfolio.html" class="nav__link">portfolio</a></li>
           </ul>
         </nav>
@@ -63,11 +62,12 @@
                 <li class="mob-nav__item">
                   <a href="./about.html" class="mob-nav__link mob-nav__link--current">about</a>
                 </li>
-                <li class="mob-nav__item">
-                  <a href="./service.html" class="mob-nav__link">service</a>
-                </li>
+                <li class="mob-nav__item"></li>
                 <li class="mob-nav__item">
                   <a href="./portfolio.html" class="mob-nav__link">portfolio</a>
+                </li>
+                <li class="mob-nav__item">
+                  <a href="./contact.html" class="mob-nav__link mob-nav__link--contact">contact</a>
                 </li>
               </ul>
             </nav>
@@ -122,7 +122,6 @@
                   </a>
                 </li>
               </ul>
-              <a href="./contact.html" class="mob-nav__link mob-nav__link--contact">contact</a>
             </div>
           </div>
         </div>
@@ -294,6 +293,51 @@
               </svg>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="section experiences">
+        <div class="container experiences-container">
+          <h2 class="title experiences__title">
+            <span class="title-accent">03</span>My Experiences
+          </h2>
+          <ul class="experiences__list">
+            <li class="experiences__item">
+              <h3 class="title experiences__item-title">
+                <span class="experiences__item-title-accent">01</span>Lead Web Developer
+              </h3>
+              <p class="experiences__item-text">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis enim
+                velit ullamco
+              </p>
+            </li>
+            <li class="experiences__item">
+              <h3 class="title experiences__item-title experiences__item-title--end">
+                <span class="experiences__item-title-accent">02</span>Lead Web Developer
+              </h3>
+              <p class="experiences__item-text">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis enim
+                velit ullamco
+              </p>
+            </li>
+            <li class="experiences__item">
+              <h3 class="title experiences__item-title">
+                <span class="experiences__item-title-accent">03</span>Lead Web Developer
+              </h3>
+              <p class="experiences__item-text">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis enim
+                velit ullamco
+              </p>
+            </li>
+            <li class="experiences__item">
+              <h3 class="title experiences__item-title experiences__item-title--end">
+                <span class="experiences__item-title-accent">04</span>Lead Web Developer
+              </h3>
+              <p class="experiences__item-text">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis enim
+                velit ullamco
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="stacks section">
