--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,6 @@
             <li class="nav__item">
               <a href="./about.html" class="nav__link">about</a>
             </li>
-            <li class="nav__item">
-              <a href="./service.html" class="nav__link">service</a>
-            </li>
             <li class="nav__item"><a href="./portfolio.html" class="nav__link">portfolio</a></li>
           </ul>
         </nav>
@@ -66,10 +63,10 @@
                   <a href="./about.html" class="mob-nav__link">about</a>
                 </li>
                 <li class="mob-nav__item">
-                  <a href="./service.html" class="mob-nav__link">service</a>
+                  <a href="./portfolio.html" class="mob-nav__link">portfolio</a>
                 </li>
                 <li class="mob-nav__item">
-                  <a href="./portfolio.html" class="mob-nav__link">portfolio</a>
+                  <a href="./contact.html" class="mob-nav__link mob-nav__link--contact">contact</a>
                 </li>
               </ul>
             </nav>
@@ -124,7 +121,6 @@
                   </a>
                 </li>
               </ul>
-              <a href="./contact.html" class="mob-nav__link mob-nav__link--contact">contact</a>
             </div>
           </div>
         </div>
@@ -192,54 +188,46 @@
         <div class="container">
           <div class="contact__columns">
             <div class="contact__column">
-              <h2 class="title contact-title"><span class="title-accent">01</span>Contact</h2>
-              <ul class="footer__contact-list">
-                <li class="footer__contact-item">
-                  <a class="footer__contact-link" href="tel:+380685856991">
-                    <svg class="footer__contact-icon" width="24" height="24">
+              <h2 class="title contact-title"><span class="title-accent">01</span>My contacts</h2>
+              <ul class="contact__list">
+                <li class="contact__item">
+                  <a class="contact__link" href="tel:+380685856991">
+                    <svg class="contact__icon" width="24" height="24">
                       <use href="./images/symbol-defs.svg#icon-phone"></use>
                     </svg>
-                    <div class="footer__contact-info">
-                      <p class="footer__contact-type">Phone</p>
-                      <p class="footer__contact-detail">+38 (068) 585-69-91</p>
+                    <div class="contact__info">
+                      <p class="contact__type">Phone</p>
+                      <p class="contact__detail">+38 (068) 585-69-91</p>
                     </div>
                   </a>
                 </li>
-                <li class="footer__contact-item">
-                  <a class="footer__contact-link" href="mailto:oleksandr.moskalets.dev@gmail.com">
-                    <svg class="footer__contact-icon" width="24" height="24">
+                <li class="contact__item">
+                  <a class="contact__link" href="mailto:oleksandr.moskalets.dev@gmail.com">
+                    <svg class="contact__icon" width="24" height="24">
                       <use href="./images/symbol-defs.svg#icon-email"></use>
                     </svg>
-                    <div class="footer__contact-info">
-                      <p class="footer__contact-type">Email</p>
-                      <p class="footer__contact-detail">oleksandr.moskalets.dev@gmail.com</p>
+                    <div class="contact__info">
+                      <p class="contact__type">Email</p>
+                      <p class="contact__detail">oleksandr.moskalets.dev@gmail.com</p>
                     </div>
                   </a>
                 </li>
-                <li class="footer__contact-item">
-                  <a
-                    class="footer__contact-link"
-                    href="#"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                  >
-                    <svg class="footer__contact-icon" width="24" height="24">
+                <li class="contact__item">
+                  <a class="contact__link" href="#" target="_blank" rel="noopener noreferrer">
+                    <svg class="contact__icon" width="24" height="24">
                       <use href="./images/symbol-defs.svg#icon-point"></use>
                     </svg>
-                    <div class="footer__contact-info">
-                      <p class="footer__contact-type">Address</p>
-                      <p class="footer__contact-detail">Kyiv, Ukraine</p>
+                    <div class="contact__info">
+                      <p class="contact__type">Address</p>
+                      <p class="contact__detail">Kyiv, Ukraine</p>
                     </div>
                   </a>
                 </li>
               </ul>
             </div>
-            <div class="map contact__column">
+            <div class="contact__map contact__column">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d411.65926176939587!2d33.41636629624095!3d49.0700417979708!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d75323d0785153%3A0x9adcac3ec41912d6!2z0YPQuy4g0JjQs9C-0YDRjyDQodC10YDQtNGO0LrQsCwgNDcsINCa0YDQtdC80LXQvdGH0YPQsywg0J_QvtC70YLQsNCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsIDM5NjAw!5e0!3m2!1sru!2sua!4v1685556869719!5m2!1sru!2sua"
-                width="600"
-                height="450"
-                style="border: 0"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d325516.56922282587!2d30.203059190591798!3d50.4020075186464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf4ee15a4505%3A0x764931d2170146fe!2z0JrQuNGX0LIsIDAyMDAw!5e0!3m2!1suk!2sua!4v1695458507109!5m2!1suk!2sua"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
@@ -297,7 +285,7 @@
     <footer class="footer section">
       <div class="container footer-container">
         <div class="footer__content">
-          <h2 class="title footer-title"><span class="title-accent">05</span>contact</h2>
+          <h2 class="title footer-title"><span class="title-accent">03</span>contact</h2>
           <address class="footer__address">
             <ul class="footer__contact-list">
               <li class="footer__contact-item">
