--- a/about.html
+++ b/about.html
@@ -62,7 +62,6 @@
                 <li class="mob-nav__item">
                   <a href="./about.html" class="mob-nav__link mob-nav__link--current">about</a>
                 </li>
-                <li class="mob-nav__item"></li>
                 <li class="mob-nav__item">
                   <a href="./portfolio.html" class="mob-nav__link">portfolio</a>
                 </li>
@@ -612,7 +611,9 @@
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script type="module" src="./js/script.js"></script>
+    <script type="module" src="./js/scroll.js"></script>
+    <script type="module" src="./js/mob-menu.js"></script>
+    <script type="module" src="./js/modal.js"></script>
+    <script type="module" src="./js/skills.js"></script>
   </body>
 </html>
