--- a/index.html
+++ b/index.html
@@ -788,6 +788,10 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script type="module" src="./js/script.js"></script>
+    <script type="module" src="./js/scroll.js"></script>
+    <script type="module" src="./js/mob-menu.js"></script>
+    <script type="module" src="./js/modal.js"></script>
+    <script type="module" src="./js/portfolio-slider.js"></script>
+    <script type="module" src="./js/testimonial-slider.js"></script>
   </body>
 </html>
