--- a/portfolio.html
+++ b/portfolio.html
@@ -657,7 +657,9 @@
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script type="module" src="./js/script.js"></script>
+    <script type="module" src="./js/scroll.js"></script>
+    <script type="module" src="./js/mob-menu.js"></script>
+    <script type="module" src="./js/modal.js"></script>
+    <script type="module" src="./js/portfolio-filter.js"></script>
   </body>
 </html>
