--- a/contact.html
+++ b/contact.html
@@ -420,6 +420,7 @@
       </div>
     </footer>
 
-    <script type="module" src="./js/script.js"></script>
+    <script type="module" src="./js/scroll.js"></script>
+    <script type="module" src="./js/mob-menu.js"></script>
   </body>
 </html>
