skills-js-works

--- a/about.html
+++ b/about.html
@@ -243,52 +243,70 @@
             <div class="skills__skill animated">
               <div class="skill__outer">
                 <div class="skill__inner">
-                  <p class="skill__number"></p>
+                  <p class="skill__number" data-number="78"></p>
                 </div>
               </div>
               <svg class="skill__circle" width="160" height="160">
                 <defs>
                   <linearGradient id="GradientColor">
-                    <stop offset="0%" stop-color="#e91e63" />
-                    <stop offset="100%" stop-color="#673ab7" />
+                    <stop offset="0%" stop-color="#FE390C" />
+                    <stop offset="100%" stop-color="#A9A9AA" />
                   </linearGradient>
                 </defs>
-                <circle class="circle" cx="80" cy="80" r="70" stroke-linecap="round" />
-                <!-- <use xlink:href="./images/symbol-defs.svg#icon-circle"></use> -->
+                <circle
+                  class="circle"
+                  data-number="78"
+                  cx="80"
+                  cy="80"
+                  r="70"
+                  stroke-linecap="round"
+                />
               </svg>
             </div>
             <div class="skills__skill animated">
               <div class="skill__outer">
                 <div class="skill__inner">
-                  <p class="skill__number"></p>
+                  <p class="skill__number" data-number="60"></p>
                 </div>
               </div>
               <svg class="skill__circle" width="160" height="160">
                 <defs>
                   <linearGradient id="GradientColor">
-                    <stop offset="0%" stop-color="#e91e63" />
-                    <stop offset="100%" stop-color="#673ab7" />
+                    <stop offset="0%" stop-color="#FE390C" />
+                    <stop offset="100%" stop-color="#A9A9AA" />
                   </linearGradient>
                 </defs>
-                <circle class="circle" cx="80" cy="80" r="70" stroke-linecap="round" />
-                <!-- <use xlink:href="./images/symbol-defs.svg#icon-circle"></use> -->
+                <circle
+                  class="circle"
+                  data-number="60"
+                  cx="80"
+                  cy="80"
+                  r="70"
+                  stroke-linecap="round"
+                />
               </svg>
             </div>
             <div class="skills__skill animated">
               <div class="skill__outer">
                 <div class="skill__inner">
-                  <p class="skill__number"></p>
+                  <p class="skill__number" data-number="85"></p>
                 </div>
               </div>
               <svg class="skill__circle" width="160" height="160">
                 <defs>
                   <linearGradient id="GradientColor">
-                    <stop offset="0%" stop-color="#e91e63" />
-                    <stop offset="100%" stop-color="#673ab7" />
+                    <stop offset="0%" stop-color="#FE390C" />
+                    <stop offset="100%" stop-color="#A9A9AA" />
                   </linearGradient>
                 </defs>
-                <circle class="circle" cx="80" cy="80" r="70" stroke-linecap="round" />
-                <!-- <use xlink:href="./images/symbol-defs.svg#icon-circle"></use> -->
+                <circle
+                  class="circle"
+                  data-number="85"
+                  cx="80"
+                  cy="80"
+                  r="70"
+                  stroke-linecap="round"
+                />
               </svg>
             </div>
           </div>
