skills-styles-are-done

--- a/about.html
+++ b/about.html
@@ -229,87 +229,98 @@
         </div>
       </section>
       <section class="skills">
-        <div class="container">
+        <div class="container skills-container">
           <div class="skills__info">
-            <h2 class="title"><span class="title-accent">02</span>My Skills</h2>
+            <h2 class="title skills__title"><span class="title-accent">02</span>My Skills</h2>
             <p class="skills__text">
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-              officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
-              amet.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt sunt praesentium
+              quis enim iste a alias, harum aspernatur veritatis provident mollitia asperiores,
+              ducimus aliquid minima optio? Mollitia qui voluptate officiis pariatur est aut itaque
+              omnis laborum ea quod! Architecto omnis sapiente numquam vitae molestiae corrupti ab
+              doloremque quidem cum vero?
             </p>
             <button class="button open-modal-button">Download CV</button>
           </div>
-          <div class="skills__stats">
-            <div class="skills__skill animated">
-              <div class="skill__outer">
-                <div class="skill__inner">
-                  <p class="skill__number" data-number="78"></p>
+          <ul class="skills__list">
+            <li class="skills__item">
+              <div class="skills__skill animated">
+                <div class="skill__outer">
+                  <div class="skill__inner">
+                    <p class="skill__header">Soft Skills</p>
+                    <p class="skill__number" data-number="86">0%</p>
+                  </div>
                 </div>
+                <svg class="skill__circle" width="160" height="160">
+                  <defs>
+                    <linearGradient id="GradientColor">
+                      <stop offset="0%" stop-color="#FE390C" />
+                      <stop offset="100%" stop-color="#A9A9AA" />
+                    </linearGradient>
+                  </defs>
+                  <circle
+                    class="circle"
+                    data-number="86"
+                    cx="80"
+                    cy="80"
+                    r="70"
+                    stroke-linecap="round"
+                  />
+                </svg>
               </div>
-              <svg class="skill__circle" width="160" height="160">
-                <defs>
-                  <linearGradient id="GradientColor">
-                    <stop offset="0%" stop-color="#FE390C" />
-                    <stop offset="100%" stop-color="#A9A9AA" />
-                  </linearGradient>
-                </defs>
-                <circle
-                  class="circle"
-                  data-number="78"
-                  cx="80"
-                  cy="80"
-                  r="70"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </div>
-            <div class="skills__skill animated">
-              <div class="skill__outer">
-                <div class="skill__inner">
-                  <p class="skill__number" data-number="60"></p>
+            </li>
+            <li class="skills__item">
+              <div class="skills__skill animated">
+                <div class="skill__outer">
+                  <div class="skill__inner">
+                    <p class="skill__header">Hard Skills</p>
+                    <p class="skill__number" data-number="51">0%</p>
+                  </div>
                 </div>
+                <svg class="skill__circle" width="160" height="160">
+                  <defs>
+                    <linearGradient id="GradientColor">
+                      <stop offset="0%" stop-color="#FE390C" />
+                      <stop offset="100%" stop-color="#A9A9AA" />
+                    </linearGradient>
+                  </defs>
+                  <circle
+                    class="circle"
+                    data-number="51"
+                    cx="80"
+                    cy="80"
+                    r="70"
+                    stroke-linecap="round"
+                  />
+                </svg>
               </div>
-              <svg class="skill__circle" width="160" height="160">
-                <defs>
-                  <linearGradient id="GradientColor">
-                    <stop offset="0%" stop-color="#FE390C" />
-                    <stop offset="100%" stop-color="#A9A9AA" />
-                  </linearGradient>
-                </defs>
-                <circle
-                  class="circle"
-                  data-number="60"
-                  cx="80"
-                  cy="80"
-                  r="70"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </div>
-            <div class="skills__skill animated">
-              <div class="skill__outer">
-                <div class="skill__inner">
-                  <p class="skill__number" data-number="85"></p>
+            </li>
+            <li class="skills__item">
+              <div class="skills__skill animated">
+                <div class="skill__outer">
+                  <div class="skill__inner">
+                    <p class="skill__header">English</p>
+                    <p class="skill__number" data-number="71">0%</p>
+                  </div>
                 </div>
+                <svg class="skill__circle" width="160" height="160">
+                  <defs>
+                    <linearGradient id="GradientColor">
+                      <stop offset="0%" stop-color="#FE390C" />
+                      <stop offset="100%" stop-color="#A9A9AA" />
+                    </linearGradient>
+                  </defs>
+                  <circle
+                    class="circle"
+                    data-number="71"
+                    cx="80"
+                    cy="80"
+                    r="70"
+                    stroke-linecap="round"
+                  />
+                </svg>
               </div>
-              <svg class="skill__circle" width="160" height="160">
-                <defs>
-                  <linearGradient id="GradientColor">
-                    <stop offset="0%" stop-color="#FE390C" />
-                    <stop offset="100%" stop-color="#A9A9AA" />
-                  </linearGradient>
-                </defs>
-                <circle
-                  class="circle"
-                  data-number="85"
-                  cx="80"
-                  cy="80"
-                  r="70"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="section experiences">
