--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="header header-js">
-      <div class="container header-container">
+      <div class="header-container">
         <a href="./index.html" lang="en" class="logo header__logo">
           <span class="logo-letter">M</span>
           <span class="logo-letter">O</span></a
