--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="header header-js">
-      <div class="container header-container">
+      <div class="header-container">
         <a href="./index.html" lang="en" class="logo header__logo">
           <span class="logo-letter">M</span>
           <span class="logo-letter">O</span></a
@@ -388,12 +388,16 @@
           <div class="stacks__actions">
             <h3 class="stacks__actions-title">let’s work together on Your Next Project</h3>
             <button class="stacks__hire-button button open-modal-button">HIRE ME NOW</button>
-            <button type="button" class="stacks__download-button">
-              <svg class="stacks__download-icon" width="16" height="16">
+            <a
+              href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+              download="Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+              class="download-link"
+            >
+              <svg class="download-icon" width="16" height="16">
                 <use href="./images/symbol-defs.svg#icon-vector-btn"></use>
               </svg>
               Download CV
-            </button>
+            </a>
           </div>
         </div>
       </section>
@@ -648,12 +652,16 @@
           </div>
           <button type="submit" class="modal-form__btn button">Send</button>
         </form>
-        <button type="button" class="stacks__download-button stacks__download-button--modal">
+        <a
+          href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+          download="Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+          class="download-link download-link--modal"
+        >
           <svg class="stacks__download-icon" width="16" height="16">
             <use href="./images/symbol-defs.svg#icon-vector-btn"></use>
           </svg>
           Download CV
-        </button>
+        </a>
       </div>
     </div>
 
