--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
               <li class="about__stat">
                 <img src="./images/about1.jpg" alt="" class="about__stat-image" />
                 <div class="about__stat-info">
-                  <p class="abut__stat-text">Saticfied<br />Customers</p>
+                  <p class="about__stat-text">Saticfied<br />Customers</p>
                   <span class="title-accent">25</span>
                 </div>
               </li>
               <li class="about__stat">
                 <div class="about__stat-info">
                   <span class="title-accent">8</span>
-                  <p class="abut__stat-text">Year<br />of experience</p>
+                  <p class="about__stat-text">Year<br />of experience</p>
                 </div>
 
                 <img src="./images/about2.jpg" alt="" class="about__stat-image" />
