development-modal-added

--- a/index.html
+++ b/index.html
@@ -795,11 +795,23 @@
       </div>
     </div>
 
+    <div id="developmentModal" class="development-backdrop is-hidden">
+      <div class="development-modal">
+        <button id="development-modal__close-btn" type="button" class="modal__close-btn close-btn">
+          <svg class="close-btn__icon" width="30" height="30">
+            <use href="./images/symbol-defs.svg#close-icon"></use>
+          </svg>
+        </button>
+        <b class="modal__title">This site is under development...</b>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="module" src="./js/scroll.js"></script>
     <script type="module" src="./js/mob-menu.js"></script>
     <script type="module" src="./js/modal.js"></script>
     <script type="module" src="./js/portfolio-slider.js"></script>
     <script type="module" src="./js/testimonial-slider.js"></script>
+    <script type="module" src="./js/development-modal.js"></script>
   </body>
 </html>
